--- a/style.css
+++ b/style.css
@@ -1,9 +1,47 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-  font-family: "Roboto Condensed", sans-serif;
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  padding: 40px;
 }
 
+form {
+  border: 1px solid #ccc;
+  padding: 30px;
+  border-radius: 8px;
+  width: 300px;
+}
 
+form h2 {
+  text-align: center;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+
+label i {
+  margin-right: 10px;
+}
+
+input {
+  flex: 1;
+  padding: 8px;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+#msg {
+  margin: 5px 0;
+}
+
+#error {
+  margin: 5px 0;
+}
